update questionquery
