# apiDocs/swagger.yaml
@@ -8,9 +8,9 @@ servers:
 paths:
   /new_group:
     get:
-      description: "Post your username, and recieve an api key, the api key also works as your timer."
+      description: "Post your group_name, and recieve an api key, the api key also works as your timer."
       parameters:
-        - name: username
+        - name: group_name
           in: header
           schema:
             type: string
@@ -64,7 +64,7 @@ paths:
         '500':
           description: Internal Server Error
     post:
-      description: Posts an Answer to a served question
+      description: Posts an Answer to a served question, remember to set "Content-Type" in header!
       parameters:
               - name: api_key
                 in: header
