# server.ts
@@ -56,7 +56,7 @@ paskeApi.get("/readme", (req, res)=>{
 
 
 paskeApi.get("/new_group", async(req, res)=>{
-    const username = req.headers.username as string
+    const username = req.headers.group_name as string
     if (!username){
         return res.status(404).json({
             error:{
@@ -74,7 +74,7 @@ paskeApi.get("/new_group", async(req, res)=>{
     }
     return res.status(200).json({
         success: {
-            message: "Groupname saved, Quiz Initiated",
+            message: "Groupname saved, Quiz Initiated, Good luck!",
             api_key: postUser.data
         }
     })
